# mcp-gateway

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yml  pyproject.toml
docs/: architecture.md  deployment.md  modules.md
src/mcp_gateway/: __main__.py  app.py  config.py  logging_config.py  registry.py
src/mcp_gateway/modules/: base.py
src/mcp_gateway/modules/browser/: __init__.py  models.py  module.py
src/mcp_gateway/modules/core/: __init__.py  models.py  module.py
src/mcp_gateway/modules/cron/: __init__.py  module.py
src/mcp_gateway/modules/media/: __init__.py  module.py
src/mcp_gateway/modules/memory/: __init__.py  module.py
src/mcp_gateway/modules/openclaw/: __init__.py
src/mcp_gateway/modules/sessions/: __init__.py  models.py  module.py
src/mcp_gateway/modules/tasks/: __init__.py  module.py
src/mcp_gateway/modules/telegram_bot/: __init__.py  client.py  models.py  module.py
src/mcp_gateway/modules/telegram_user/: __init__.py  client.py  models.py  module.py
